--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: CTX Fitness
 email: jcarroll@fullsail.edu
 description: Visualize this thing you want. See it, feel it, believe in it. Make your mental blueprint and begin.
-baseurl: "" # the subpath of your site, e.g. /blog/
+baseurl: "/ctxFitness2" # the subpath of your site, e.g. /blog/
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 twitter_username: crossfitctx
 
